# LlmPromptCategorization

./: .env.dirs  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
MathsCatGen/: __init__.py  maths_catgen.py
notebooks/: CatGen_Explore.ipynb  CatGen_FindModels.ipynb  Explore.ipynb  QCatGen_Models.ipynb
tests/: test_maths_catgen.py
